	  touchscreen seems to work better with edge (vs. level) interrupts
	* drivers/input/stmpe11_tsc.c:  Fix some status checks so that the touchscreen
	  interrupt handling logic does not read data if the fifo is not at the
	  threshold level.
	* include/nuttx/wqueue.h: Add macro work_available() to determine if the
	  previously scheduled work has completed.
	* drivers/stmpe11_tsc.c:  Correct errors: (1) Since all interrupt logic is done on
	  the worker thread, disabling interrupts does not provide protected; Need to
	  disable pre-emption.  (2) Fix handling of touch ID and (2) add some logic to
	  prevent certain kinds of data overrun.
	* include/nx/nxtk.h and graphics/nx/nxtk/nxtk_internal.h:  Move setting
	  of configuration defaults from the internal header file to a place where
	  other logic can use the defaults.
	* graphics/nxtk/nxtk_events.c:  Fixed an important but in the logic that
	  translates the mouse/touchscreen position data for framed windows and toolbars.
	* drivers/input/stmpe11_tsc.c, tsc2007.c, and ads7843e.c:  Need to keep track of
	  when if positional data is valid.  When the touch is released, the X/Y position
	  of the release must be the same as the X/Y position of the last touch (se that
	  the release occurs in the same window as the last touch).
	* graphics/nxtk/nxtk_events.c:  Fix an error in mouse/touchscreen input logic:
	  Was autoraising the window AFTER processing the mouse press.  This raises havoc
	  if the result of processing the mouse click was to raise some other window!
	* graphics/nxtk/nxtk_events.c:  I had to disable the whole autoraise feature
	  for multi-user case because it does not work correctly.  In a scenario where (1) there
	  are multiple queued touchscreen events for the same window and (2) the result of the
	  first input was to switch windows, then the autoraise implementation will cause the
	  window to revert to the previous window.  Not good behavior.